## This is the shared library to be built
lib_LTLIBRARIES = libmodblockinator.la

## Define the source file for the module
libmodblockinator_la_SOURCES = mod_blockinator.c

## Define that an include directory is required.
INCLUDES = -I@apache_dir@/include/httpd -I@apache_dir@/include/apr-1

## ACLOCAL recommendation
ACLOCAL_AMFLAGS = -I m4
